[gd_scene load_steps=6 format=3 uid="uid://c75akqqigtmh6"]

[ext_resource type="PackedScene" uid="uid://j6hvq4pejmsk" path="res://Components/ProgressBar/Bar.tscn" id="1_dlnh0"]
[ext_resource type="Script" path="res://Scene/char_stat.gd" id="1_uf2p6"]
[ext_resource type="Script" path="res://Components/ProgressBar/Bar.gd" id="2_hckkn"]

[sub_resource type="SystemFont" id="SystemFont_01gd0"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_dfpsp"]
line_spacing = 0.0
font = SubResource("SystemFont_01gd0")
font_size = 9

[node name="char_stat" type="VBoxContainer"]
script = ExtResource("1_uf2p6")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="hp_container" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="hp_bar" parent="VBoxContainer/hp_container" instance=ExtResource("1_dlnh0")]
unique_name_in_owner = true
self_modulate = Color(1, 0.270588, 0.270588, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="hp_value" type="Label" parent="VBoxContainer/hp_container"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
text = "0/0"
label_settings = SubResource("LabelSettings_dfpsp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="mp_container" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="mp_bar" parent="VBoxContainer/mp_container" instance=ExtResource("1_dlnh0")]
unique_name_in_owner = true
self_modulate = Color(0, 0.686275, 1, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="mp_value" type="Label" parent="VBoxContainer/mp_container"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
text = "0/0"
label_settings = SubResource("LabelSettings_dfpsp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="h_box_container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="exp_bar" type="ProgressBar" parent="h_box_container"]
unique_name_in_owner = true
modulate = Color(1, 0.823529, 0.470588, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 6
script = ExtResource("2_hckkn")

[node name="lvl" type="Label" parent="h_box_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "LV:0"
horizontal_alignment = 1
vertical_alignment = 1
